--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
     <div class="profile">
         <img src="./images/test.jpg"/>
         <h1>Camila User</h1>
-
+        <div id="react-root"></div>
     </div>
     <script src="/main-bundle.js"></script>
 </body>
